# computer_enhance

./: CMakeLists.txt  CMakePresets.json  Notes.md  computer_enhance.raddbg
homework/part2/: CMakeLists.txt  haversine_generator.cpp  haversine_math.cpp  haversine_math.hpp  haversine_parser.cpp  haversine_parser.hpp  json_parser.cpp  metrics.cpp  metrics.hpp  profile_haversine_1.cpp  profile_haversine_2.cpp  profiler.cpp  profiler.hpp  types.hpp
perfaware/part2/: 66_haversine_generator.cpp  67_haversine_parser.cpp  67_parse_haversine_data.cpp  74_metrics.cpp  75_profile_haversine.cpp  76_simple_profiler.cpp  77_parse_haversine_profiled.cpp  78_profile_haversine.cpp
